--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
                     <!-- 4 item portoflio-->
 
                     <li>
-                        <a href="#">
-                            <img src="img/portfolio/4.png" alt="Portfolio item" />
+                        <a href="Brandwashed/Brandwashed.html">
+                            <img src="Brandwashed/Wallpaper%20version.jpg" width = "601" height = "255"  alt="Portfolio item" />
                             <div class="text">
-                                <p>PORTFOLIO 4</p>
-                                <p class="description">Under construction...</p>
+                                <p>Third Person Stealth Fetch Quest Game</p>
+                                <p class="description">Explores the concept of manipulative advertising</p>
                             </div>
                         </a>
                     </li>
