Edited Brandwashed tile

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                         <a href="Brandwashed/Brandwashed.html">
                             <img src="Brandwashed/Wallpaper%20version.jpg" width = "601" height = "255"  alt="Portfolio item" />
                             <div class="text">
-                                <p>Third Person Stealth Fetch Quest Game</p>
-                                <p class="description">Explores the concept of manipulative advertising</p>
+                                <p>Brandwashed</p>
+                                <p class="description">Third Person Stealth Fetch Quest Game</p>
                             </div>
                         </a>
                     </li>
