more updated bio

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
             <h1>ABOUT ME</h1>
             <hr/>
+            <p class="title">My name is Sujay Chand and I am an aspiring programmer and game developer. I am currently in my final(thrid) year of my Bachelor's of Creative Technologies. I enjoy my time exploring code, practicing Martial Arts, cooking and learning a new skill. I tend to have a habit of pushing myself, because only when we are pushed to our limits; is when we develop the most as a person.</p>
 
             <div class="column-one">
 
