Past and currwent project

--- a/Brandwashed/Brandwashed.html
+++ b/Brandwashed/Brandwashed.html
@@ -96,13 +96,12 @@
       
                       <p></p>
                 <center>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ioXDsV8_1gY" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/8Rbt7XDSJik" frameborder="0" allowfullscreen></iframe>
                 </center>
                 <p></p>
-      <p><i>I had issues recording the sound.</i></p>
       
        <h2>Group Roles:</h2>
-                <p>Sujay Chand (Myself) - Programmer </p>
+                <p>Sujay Chand (Myself) - Programmer (Blueprint) and Technical Artist</p>
                 <p><a href="http://creativetechnologies.aut.ac.nz/~sfg3601" target="_blank"> Laura O'Loughlin </a> - 3D Artist, Level Designer and Project Manager </p>
                 <p><a href="http://www.gracewilfred.com/" target="_blank"> Grace Wilfred </a> - 3D Artist</p>
                 <p><a href="https://jexire.com/" target="_blank"> Shaun McCullough </a> - 2D Artist, Audio and Video Production</p>
