--- a/DTB/DrunkenTarvenBrawler.html
+++ b/DTB/DrunkenTarvenBrawler.html
@@ -96,7 +96,7 @@
       
                       <p></p>
                 <center>
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ftI8riykJgo" frameborder="0" allowfullscreen></iframe>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/txF5_J8hjqg" frameborder="0" allowfullscreen></iframe>
                 </center>
                 <p></p>
       
