Mentioned Aldo's help

--- a/DTB/DrunkenTarvenBrawler.html
+++ b/DTB/DrunkenTarvenBrawler.html
@@ -106,6 +106,7 @@
                 <p><a href="https://harryokona.myportfolio.com/" target="_blank"> Harry O'Connor </a> - UI and Sound</p>
       <p>Special thanks to: </p>
                <p> William Singh for Music and a couple animations</p>
+                <p> <a href="https://www.projectlimbus.com/" target="_blank"> Aldo Visini </a> for lighting help</p>
       <p></p>
          <p>The Characters and majority of the animations were <a href="https://www.unrealengine.com/marketplace/meatbags-fantasy-citizens" target = "_blank">bought</a></p>       
                 
