Made special thanks bold

--- a/DTB/DrunkenTarvenBrawler.html
+++ b/DTB/DrunkenTarvenBrawler.html
@@ -104,7 +104,7 @@
                 <p>Sujay Chand (Myself) - Programmer (Blueprint), Technical Artist, Game Designer and Project Manager</p>
                 <p><a href="https://ryancsue.wixsite.com/creativetech" target="_blank"> Ryan Sue </a> - 3D Artist and Level Designer</p>
                 <p><a href="https://harryokona.myportfolio.com/" target="_blank"> Harry O'Connor </a> - UI and Sound</p>
-      <p>Special thanks to: </p>
+      <p><strong>Special thanks to: </strong></p>
                <p> William Singh for Music and a couple animations</p>
                 <p> <a href="https://www.projectlimbus.com/" target="_blank"> Aldo Visini </a> for lighting help</p>
       <p></p>
