--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1>ABOUT ME</h1>
             <hr/>
             
-            <p class="title">I am currently in my final(thrid) year of my Bachelor's of Creative Technologies, where we learn to communicate between different specialists and form the bridge between their knowledge gaps. I am predominantly a <strong>Programmer</strong> who has experience in <strong>Game Development</strong>, <strong>Mixed Reality</strong> (Professional Paid Experience) and <strong>Software Development</strong>. I have worked on a commercial Hololens at Dimension Data NZ that is under NDA.</p>
+            <p class="title">I am currently in my final(third) year of my Bachelor's of Creative Technologies, where we learn to communicate between different specialists and form the bridge between their knowledge gaps. I am predominantly a <strong>Programmer</strong> who has experience in <strong>Game Development</strong>, <strong>Mixed Reality</strong> (Professional Paid Experience) and <strong>Software Development</strong>. I have worked on a commercial Hololens at Dimension Data NZ that is under NDA.</p>
 
             <p>In my free time, I like to do Martial Arts, play with Unreal Engine 4 and dabble in Technical Art.</p>
 
