--- a/DTB/DrunkenTarvenBrawler.html
+++ b/DTB/DrunkenTarvenBrawler.html
@@ -101,7 +101,7 @@
                 <p></p>
       
        <h2>Group Roles:</h2>
-                <p>Sujay Chand (Myself) - Programmer (Blueprint), Technical Artist, Game Designer and Project Manager</p>
+                <p>Sujay Chand (Myself) - Programmer (Blueprint), Technical Artist, Game Designer and <a href="https://trello.com/b/SmoWX2ni/drunken-tavern-brawler" target="_blank">Project Manager</a></p>
                 <p><a href="https://ryancsue.wixsite.com/creativetech" target="_blank"> Ryan Sue </a> - 3D Artist and Level Designer</p>
                 <p><a href="https://harryokona.myportfolio.com/" target="_blank"> Harry O'Connor </a> - UI and Sound</p>
       <p><strong>Special thanks to: </strong></p>
