Added ReLive to the portfolio

--- a/Brandwashed/Brandwashed.html
+++ b/Brandwashed/Brandwashed.html
@@ -90,7 +90,7 @@
     <hr/>
     <p class="title">A 3rd person stealth fetch quest game</p>
     
-      <p>This was a four person student project in Unreal Engine 4. The project explored the effect of manipulative advertising on the mass, through our fictional corporation <strong>Lifestyle Dynamics</strong>.
+      <p>This was a four person student project in <strong>Unreal Engine 4</strong>. The project explored the effect of manipulative advertising on the mass, through our fictional corporation <strong>Lifestyle Dynamics</strong>.
       </p>
       <p>The goal of the game is to infiltrate Lifestyle Dynamics headquaters and put an end to their evil plans.</p>
       
