--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1>ABOUT ME</h1>
             <hr/>
             
-            <p class="title">I am currently in my final(thrid) year of my Bachelor's of Creative Technologies, where we learn to communicate between different specialists and form the bridge between their knowledge gaps. I am predominantly a <strong>Programmer</strong> who has experience in <strong>Game Development</strong>, <strong>Mixed Reality</strong> (Professional Paid Experience) and <strong>Software Development</strong>. I have worked on a commercial Hololens at Dimension Data NZ that is under NDA.</p>
+            <p class="title">I studied a Bachelor's of Creative Technologies, where we learnt how to communicate between different specialists and form the bridge between their knowledge gaps. I am predominantly a <strong>Programmer</strong> who has experience in <strong>Game Development</strong>, <strong>Mixed Reality</strong> and <strong>Software Development</strong>. I have worked on a commercial Hololens project at Dimension Data NZ that is under NDA.</p>
 
             <p>In my free time, I like to do Martial Arts, play with Unreal Engine 4 and dabble in Technical Art.</p>
 
@@ -119,7 +119,7 @@
                 <div class="circle-one"></div>
 
                 <h2>Programming</h2>
-                <p>Blueprinting, C#(Paid), C++, Processing, Java & Arduino</p>
+                <p>Blueprinting, C#, C++, Processing, Java & Arduino</p>
 
             </div>
 
@@ -261,11 +261,11 @@
                     <!-- 6 item portoflio-->
 
                     <li>
-                        <a href="#">
-                            <img src="img/portfolio/6.png" alt="Portfolio item" />
+                        <a href="ReLive/ReLive.html">
+                            <img src="ReLive/ReLive_Cover.jpg" width = "601" height = "255" alt="Portfolio item" />
                             <div class="text">
-                                <p>PORTFOLIO 6</p>
-                                <p class="description">Under construction...</p>
+                                <p>ReLive</p>
+                                <p class="description">A Virtual Reality experience</p>
                             </div>
                         </a>
                     </li>
