--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <div class="content">
                 <div class="text">
 
+                   <!-- <div class="logo"><img src="img/logos/Portfolio%20Cover%20Pic.jpg" width="255" height="255"> </div> -->
+
                     <h1>
               Sujay Chand
           </h1>
@@ -208,33 +210,6 @@
                     </li>
 
                     <!-- 2 item portoflio-->
-
-                    <li>
-                        <a href="#">
-                            <a href="TheFifthSuit/TheFifthSuit.html">
-                                <img src="TheFifthSuit/theFifthSuitCover.jpg"  width = "601" height = "255" alt="Portfolio item" />
-                                <div class="text">
-                                    <p>The Fifth Suit</p>
-                                    <p class="description">A parkour tech demo</p>
-                                </div>
-                            </a>
-                    </li>
-
-                    <!-- 3 item portoflio-->
-
-                    <li>
-                        <a href="SpaceApp2016/SpaceLife16.html">
-                            <img src="SpaceApp2016/SpaceLifeCover.jpg"  width = "601" height = "255" alt="Portfolio item" />
-                            <div class="text">
-                                <p>Space Life - Out of Earth Experience</p>
-                                <p class="description">Won the People’s Choice Award for NASA’s Space Apps Challenge 2016, in New Zealand</p>
-                            </div>
-                        </a>
-                    </li>
-
-
-                    <!-- 4 item portoflio-->
-
                     <li>
                         <a href="Brandwashed/Brandwashed.html">
                             <img src="Brandwashed/Wallpaper%20version.jpg" width = "601" height = "255"  alt="Portfolio item" />
@@ -243,6 +218,31 @@
                                 <p class="description">Third Person Stealth Fetch Quest Game</p>
                             </div>
                         </a>
+                    </li>
+
+                   
+                    <!-- 3 item portoflio-->
+
+                                       <li>
+                        <a href="DRIV_AR/DRIV_AR.html">
+                             <img src="DRIV_AR/DRIV_AR%20Cover.jpg" width = "601" height = "255" alt="Portfolio item" />
+                            <div class="text">
+                                <p>DRIV//AR</p>
+                                <p class="description">Mixed Reality car customiser</p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <!-- 4 item portoflio-->
+
+                    <li>
+                            <a href="TheFifthSuit/TheFifthSuit.html">
+                                <img src="TheFifthSuit/theFifthSuitCover.jpg"  width = "601" height = "255" alt="Portfolio item" />
+                                <div class="text">
+                                    <p>The Fifth Suit</p>
+                                    <p class="description">A parkour tech demo</p>
+                                </div>
+                            </a>
                     </li>
 
                     <!-- 5 item portoflio-->
@@ -271,16 +271,16 @@
                     </li>
 
                     <!-- 7 item portoflio-->
-
                     <li>
-                        <a href="#">
-                            <img src="img/portfolio/7.png" alt="Portfolio item" />
+                        <a href="SpaceApp2016/SpaceLife16.html">
+                            <img src="SpaceApp2016/SpaceLifeCover.jpg"  width = "601" height = "255" alt="Portfolio item" />
                             <div class="text">
-                                <p>PORTFOLIO 7</p>
-                                <p class="description">Under construction...</p>
+                                <p>Space Life - Out of Earth Experience</p>
+                                <p class="description">Won the People’s Choice Award for NASA’s Space Apps Challenge 2016, in New Zealand</p>
                             </div>
                         </a>
                     </li>
+
 
                     <!-- 8 item portoflio-->
 
