Updated Warlocks video

--- a/SuperWarlocks/SuperWarlocks.html
+++ b/SuperWarlocks/SuperWarlocks.html
@@ -104,7 +104,7 @@
                 </p>
                 <p></p>
                 <center>
-                    <iframe width="800" height="515" src="https://www.youtube.com/embed/7NRpWip1fZ8" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/uPuucjvDGV4" frameborder="0" allowfullscreen></iframe>
                 </center>
                 <p></p>
                 <p>The goal of the game to trying and blend in with AI and other players to shoot of the platform, with fireballs. First player to 5 kills, wins. But, be careful; the moment you shoot your position is given away.</p>
