--- a/template.html
+++ b/template.html
@@ -120,6 +120,7 @@
        <center>
         <a href="https://www.linkedin.com/pub/sujay-chand/100/337/199" target="_blank">LinkedIn</a>    
         <a href="https://www.youtube.com/channel/UCmTvgvHLIP_yhuN0xDLqK3w" target="_blank">YouTube</a>
+        <a href="https://www.instagram.com/thesujaychand/" target ="_blank"> Instagram</a>
         <a href="https://github.com/sujaygchand" target="_blank">GitHub</a>
         <a href="https://twitter.com/TheSujayChand" target="_blank">Twitter</a>
         <a href="http://isthisprogress.tumblr.com/" target="_blank">Tumblr</a>
