Update ad: tech award

--- a/Brandwashed/Brandwashed.html
+++ b/Brandwashed/Brandwashed.html
@@ -89,7 +89,7 @@
        <h1>BRANDWASHED</h1>
     <hr/>
     <p class="title">A 3rd person stealth fetch quest game</p>
-    <p>Winner of the  <strong>Auckland University of Technology, Ad:Tech Award (2017)</strong></p>
+    <p>Winner of the  <strong>Auckland University of Technology, Ad:Tech Innovation Award (2017)</strong></p>
     
     
       <p>This was a four person student project in <strong>Unreal Engine 4</strong>. The project explored the effect of manipulative advertising on the mass, through our fictional corporation <strong>Lifestyle Dynamics</strong>.
