Fixed programming description

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="circle-one"></div>
 
                 <h2>Programming</h2>
-                <p>Blueprinting, C#, C++, Processing, Java & Arduino</p>
+                <p>Blueprinting, C#, Processing, Java & Arduino</p>
 
             </div>
 
