Added GGJ18 project

--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
                             </div>
                         </a>
                     </li>
+                    
+                                                           <li>
+                        <a href="Spectrum/Spectrum.html">
+                             <img src="Spectrum/SpectrumCover.png" width = "601" height = "255" alt="Portfolio item" />
+                            <div class="text">
+                                <p>Spectrum</p>
+                                <p class="description">A Co-op Bullet Hell Twin Stick Shooter</p>
+                            </div>
+                        </a>
+                    </li>
+                    
 <hr/>
                 <h1>PAST PROJECTS</h1>
                 <hr/>
