Made is tech art tuesdays

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="circle-one"></div>
 
                 <h2>Programming</h2>
-                <p>Blueprinting, C#, Processing, Java & Arduino</p>
+                <p>Blueprinting, C#, C++, Processing, Java & Arduino</p>
 
             </div>
 
@@ -200,8 +200,8 @@
                         <a href="TechArt/TechArt.html">
                              <img src="TechArt/TechArt_Logo.jpg" width = "601" height = "255" alt="Portfolio item" />
                             <div class="text">
-                                <p>Tech Art Tuesday</p>
-                                <p class="description">A showcase my technical art works</p>
+                                <p>Tech Art Tuesdays</p>
+                                <p class="description">A showcase my technical art</p>
                             </div>
                         </a>
                     </li>                  
