Updated search descrption

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Sujay Chand - Digital Portfolio</title>
 
-    <meta name="description" content="Free download theme onepage, clean and modern responsive for all" />
+    <meta name="description" content="A Games, Mixed Reality and Software Programmer, that enjoys playing with tools to discover what ""accidents"" I can turn into projects." />
     <meta name="keywords" content="responsive, html5, onepage, themes, template, clean layout, free web" />
     <meta name="author" content="Thomsoon.com" />
 
