Made portfolio hover transparent

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="circle-one"></div>
 
                 <h2>Programming</h2>
-                <p>Blueprinting, C#, C++, Processing, Java & Arduino</p>
+                <p>Blueprinting, C#, C++, Processing, Java, Arduino & HTML5</p>
 
             </div>
 
@@ -179,8 +179,8 @@
                         <a href="DTB/DrunkenTarvenBrawler.html">
                             <img src="DTB/DTB_Cover.jpg" width="601" height="255" alt="Portfolio item" />
                             <div class="text">
-                                <p>Drunken Tarven Brawler</p>
-                                <p class="description">A multiplayer 3D Arena Fighter with a drunken twist</p>
+                                <p>GAME</p>
+                                <p class="description">Unreal Engine 4</p>
                             </div>
                         </a>
                     </li>
@@ -191,8 +191,8 @@
                         <a href="DRIV_AR/DRIV_AR.html">
                             <img src="DRIV_AR/DRIV_AR%20Cover.jpg" width="601" height="255" alt="Portfolio item" />
                             <div class="text">
-                                <p>DRIV//AR</p>
-                                <p class="description">Mixed Reality car customiser</p>
+                                <p>MIXED REALITY</p>
+                                <p class="description">Unity 3D, C# and Microsoft Hololens</p>
                             </div>
                         </a>
                     </li>
@@ -203,7 +203,7 @@
                         <a href="TechArt/TechArt.html">
                             <img src="TechArt/TechArt_Logo.jpg" width="601" height="255" alt="Portfolio item" />
                             <div class="text">
-                                <p>Tech Art Tuesdays</p>
+                                <p>WEEKLY TECHINCAL ART SERIES</p>
                                 <p class="description">A showcase my technical art</p>
                             </div>
                         </a>
@@ -223,8 +223,8 @@
                             <a href="SuperWarlocks/SuperWarlocks.html">
                                 <img src="SuperWarlocks/SuperWarlocksUI_Pic.png" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>SUPER WARLOCKS</p>
-                                    <p class="description">A 4 player competitive arena game</p>
+                                    <p>GAME</p>
+                                    <p class="description">Unreal Engine 4</p>
                                 </div>
                             </a>
                         </li>
@@ -234,8 +234,8 @@
                             <a href="Brandwashed/Brandwashed.html">
                                 <img src="Brandwashed/Wallpaper%20version.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>Brandwashed</p>
-                                    <p class="description">Third Person Stealth Fetch Quest Game</p>
+                                    <p>GAME</p>
+                                    <p class="description">Unreal Engine 4</p>
                                 </div>
                             </a>
                         </li>
@@ -251,8 +251,8 @@
                             <a href="TheFifthSuit/TheFifthSuit.html">
                                 <img src="TheFifthSuit/theFifthSuitCover.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>The Fifth Suit</p>
-                                    <p class="description">A parkour tech demo</p>
+                                    <p>TECHNICAL DEMO</p>
+                                    <p class="description">Unreal Engine 4</p>
                                 </div>
                             </a>
                         </li>
@@ -263,8 +263,8 @@
                             <a href="UE4WebSwinging/UE4WebSwing.html">
                                 <img src="UE4WebSwinging/UE4WebSwinging.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>Tutorial: UE4 Spiderman Web Swinging</p>
-                                    <p class="description">Spiderman Web swinging using Blueprints</p>
+                                    <p>TUTORIAL: SPIDERMAN WEB SWINGING</p>
+                                    <p class="description">Unreal Engine 4 (Blueprints)</p>
                                 </div>
                             </a>
                         </li>
@@ -276,8 +276,8 @@
                             <a href="ReLive/ReLive.html">
                                 <img src="ReLive/ReLive_Cover.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>ReLive</p>
-                                    <p class="description">A Virtual Reality experience</p>
+                                    <p>VIRTUAL REALITY</p>
+                                    <p class="description">Unreal Engine 4 and Occulus Rift</p>
                                 </div>
                             </a>
                         </li>
@@ -287,8 +287,8 @@
                             <a href="SpaceApp2016/SpaceLife16.html">
                                 <img src="SpaceApp2016/SpaceLifeCover.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>Space Life - Out of Earth Experience</p>
-                                    <p class="description">Won the People’s Choice Award for NASA’s Space Apps Challenge 2016, in New Zealand</p>
+                                    <p>GAME CONCEPT</p>
+                                    <p class="description">Unreal Engine 4</p>
                                 </div>
                             </a>
                         </li>
@@ -297,12 +297,12 @@
                             <a href="Spectrum/Spectrum.html">
                                 <img src="Spectrum/SpectrumCover.png" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>Spectrum</p>
-                                    <p class="description">A Co-op Bullet Hell Twin Stick Shooter</p>
+                                    <p>GAME</p>
+                                    <p class="description">Unity 3D and C#</p>
                                 </div>
                             </a>
                         </li>
-                        <!-- 8 item portoflio-->
+                        <!-- 8 item portoflio 
 
                         <li>
                             <a href="#">
@@ -314,7 +314,7 @@
                             </a>
                         </li>
 
-                        <!-- 9 item portoflio-->
+                        <!-- 9 item portoflio                   
 
                         <li>
                             <a href="#">
@@ -332,6 +332,7 @@
                     <a href="#">
                         <div class="read-more">Load more</div>
                     </a>
+-->
 
             </div>
 
