Added app developer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h1>
               Sujay Chand
           </h1>
-                    <p>Game and Mixed Reality Developer</p>
+                    <p>Games, Mixed Reality and App Developer</p>
 
                     <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
                         <div class="read-more">Showreel</div>
