Added Weather App and DD project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Sujay Chand - Digital Portfolio</title>
 
-    <meta name="description" content="A Games, Mixed Reality and Software Programmer, that enjoys playing with tools to discover what ""accidents"" I can turn into projects." />
+    <meta name="description" content="A Games, Mixed Reality and Software Programmer, that enjoys playing with tools to discover what " "accidents" " I can turn into projects." />
     <meta name="keywords" content="responsive, html5, onepage, themes, template, clean layout, free web" />
     <meta name="author" content="Thomsoon.com" />
 
@@ -42,10 +42,10 @@
                     <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
                         <div class="read-more">Showreel</div>
                     </a>
-                                        <a href="https://www.linkedin.com/in/thesujaychand/" target="_blank">
+                    <a href="https://www.linkedin.com/in/thesujaychand/" target="_blank">
                         <div class="read-more">CV</div>
                     </a>
-                    
+
 
                 </div>
                 <div class="arrow-down"></div>
@@ -114,10 +114,10 @@
             <hr/>
 
             <p class="title">
-                A <strong>Games</strong>, <strong>Mixed Reality</strong> and <strong>Software Programmer</strong>, that enjoys playing with tools to discover what "accidents" I can turn into projects. Which I did throughout my Bachelor's of Creative Technologies. </p>
+                A <strong>Games</strong>, <strong>Mixed Reality</strong> and <strong>App Developer</strong>, that enjoys playing with tools and making projects. Which I did throughout my Bachelor's of Creative Technologies (2015-2017). </p>
 
 
-            <p>When I'm not developing, my life is filled with hours of Muay Thai, dabbling in the technical arts, experimenting with sound, experiencing other realities in games, and refining my culinary skills.</p>
+            <p>When I'm not developing, my life is filled with hours of Muay Thai, dabbling in the technical arts, video editing, playing video games and refining my culinary skills.</p>
 
 
 
@@ -126,7 +126,7 @@
                 <div class="circle-one"></div>
 
                 <h2>Programming</h2>
-                <p>Blueprinting, C#, C++, Processing, Java, Arduino & HTML5</p>
+                <p>Blueprinting, C#, C++, React.js, Processing, Java, Arduino & HTML5</p>
 
             </div>
 
@@ -135,7 +135,7 @@
                 <div class="circle-two"></div>
 
                 <h2>Game Development</h2>
-                <p>Unreal Engine 4 and Unity 5</p>
+                <p>Unreal Engine 4 and Unity 3D</p>
 
             </div>
 
@@ -191,7 +191,7 @@
                         <a href="DRIV_AR/DRIV_AR.html">
                             <img src="DRIV_AR/DRIV_AR%20Cover.jpg" width="601" height="255" alt="Portfolio item" />
                             <div class="text">
-                                <p>MIXED REALITY</p>
+                                <p>MIXED REALITY (PAID)</p>
                                 <p class="description">Unity 3D, C# and Microsoft Hololens</p>
                             </div>
                         </a>
@@ -240,25 +240,41 @@
                             </a>
                         </li>
 
-
                         <!-- 3 item portoflio-->
-
-
+                        <li>
+                            <a href="InSafehands/InSafeHands.html">
+                                <img src="InSafehands/DG%20cover.jpg" width="601" height="255" alt="Portfolio item" />
+                                <div class="text">
+                                    <p>MIXED REALITY (PAID)</p>
+                                    <p class="description">Unity 3D and C#</p>
+                                </div>
+                            </a>
+                        </li>
 
                         <!-- 4 item portoflio-->
-
                         <li>
-                            <a href="TheFifthSuit/TheFifthSuit.html">
-                                <img src="TheFifthSuit/theFifthSuitCover.jpg" width="601" height="255" alt="Portfolio item" />
+                            <a href="ReactWeatherApp/ReactWeatherApp.html">
+                                <img src="ReactWeatherApp/WeatherAppSS.png" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>TECHNICAL DEMO</p>
-                                    <p class="description">Unreal Engine 4</p>
+                                    <p>WEB APP</p>
+                                    <p class="description">React.js</p>
                                 </div>
                             </a>
                         </li>
 
                         <!-- 5 item portoflio-->
 
+                        <li>
+                            <a href="Spectrum/Spectrum.html">
+                                <img src="Spectrum/SpectrumCover.png" width="601" height="255" alt="Portfolio item" />
+                                <div class="text">
+                                    <p>GAME</p>
+                                    <p class="description">Unity 3D and C#</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <!-- 6 item portoflio-->
                         <li>
                             <a href="UE4WebSwinging/UE4WebSwing.html">
                                 <img src="UE4WebSwinging/UE4WebSwinging.jpg" width="601" height="255" alt="Portfolio item" />
@@ -270,7 +286,8 @@
                         </li>
 
 
-                        <!-- 6 item portoflio-->
+
+                        <!-- 7 item portoflio-->
 
                         <li>
                             <a href="ReLive/ReLive.html">
@@ -282,26 +299,32 @@
                             </a>
                         </li>
 
-                        <!-- 7 item portoflio-->
+                        <!-- 8 item portoflio-->
+
                         <li>
-                            <a href="SpaceApp2016/SpaceLife16.html">
-                                <img src="SpaceApp2016/SpaceLifeCover.jpg" width="601" height="255" alt="Portfolio item" />
+                            <a href="TheFifthSuit/TheFifthSuit.html">
+                                <img src="TheFifthSuit/theFifthSuitCover.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>GAME CONCEPT</p>
+                                    <p>TECHNICAL DEMO</p>
                                     <p class="description">Unreal Engine 4</p>
                                 </div>
                             </a>
                         </li>
 
+
+
+                        <!-- 9 item portoflio-->
                         <li>
-                            <a href="Spectrum/Spectrum.html">
-                                <img src="Spectrum/SpectrumCover.png" width="601" height="255" alt="Portfolio item" />
+                            <a href="SpaceApp2016/SpaceLife16.html">
+                                <img src="SpaceApp2016/SpaceLifeCover.jpg" width="601" height="255" alt="Portfolio item" />
                                 <div class="text">
-                                    <p>GAME</p>
-                                    <p class="description">Unity 3D and C#</p>
+                                    <p>GAME CONCEPT</p>
+                                    <p class="description">Unreal Engine 4 ()</p>
                                 </div>
                             </a>
                         </li>
+
+
                         <!-- 8 item portoflio 
 
                         <li>
