--- a/Spectrum/Spectrum.html
+++ b/Spectrum/Spectrum.html
@@ -61,7 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="icon-bar"></span>
                     </button>
                     <div class="logo">
-                        <a class="navbar-brand" href="index.html"><img src="../images/Name_logo.png" alt=" " /></a>
+                        <a class="navbar-brand" href="../index.html"><img src="../images/Name_logo.png" alt=" " /></a>
                     </div>
                 </div>
 
