--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-code" aria-hidden="true"></span></i>
+                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon customicon-code" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
@@ -718,7 +718,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-gamecontroller" aria-hidden="true"></span></i>
+                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon customicon-gamecontroller" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
@@ -731,7 +731,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
