updated about me

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 				</div>
-				<p class="para"> I am a New Zealand born programmer that love experimenting with code, playing with game engines and dabbling in technical art. When working on projects, I quickly try and get them into the hands of the user and observe their actions and feedback. I actively train Muay Thai, which is my other passion. My work and training philosophy is to not to go all out every day, rather I work towards having a highly productive week and ensuring that I am not physically or mentally fatigued to take a day off.</p>
+				<p class="para"> I am a New Zealand born programmer that loves experimenting with code, playing with game engines and dabbling in technical art. When working on projects, I quickly try and get them into the hands of the user and observe their actions and feedback. I actively train Muay Thai, which is my other passion. My work and training philosophy is to not to go all out every day, rather I work towards having a highly productive week and ensuring that I am not physically or mentally fatigued for the next day.</p>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
