--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
@@ -718,7 +718,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
@@ -731,7 +731,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
@@ -741,7 +741,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
@@ -757,7 +757,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Media Editing</h4>
@@ -767,7 +767,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="staticHovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Hardware</h4>
