--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     <!-- //for-mobile-apps -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/fontawesome.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- js -->
     <script src="js/jquery-1.11.1.min.js"></script>
@@ -708,7 +709,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-code" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
@@ -718,7 +719,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-gamecontroller"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
@@ -741,7 +742,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-webdev" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
