Tried fixing the slider

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     <!-- //for-mobile-apps -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/fontawesome.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/fontawesome.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- js -->
     <script src="js/jquery-1.11.1.min.js"></script>
