Got font awesome working

--- a/DTB/DrunkenTavernBrawler.html
+++ b/DTB/DrunkenTavernBrawler.html
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="header-bottom-right1">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:sujaygchand@gmail.com">sujaygchand@gmail.com</a></li>
+						<li><span class="fa fa-envelope" aria-hidden="true"></span><a href="mailto:sujaygchand@gmail.com">sujaygchand@gmail.com</a></li>
 						
 					</ul>
 				</div>
