--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
     </script>
     <!-- //for-mobile-apps -->
+     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/fontawesome.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- js -->
     <script src="js/jquery-1.11.1.min.js"></script>
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-right">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-film" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="fa fa-film"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
@@ -709,7 +709,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-code" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-code"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
@@ -719,7 +719,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-gamecontroller"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-gamepad"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
@@ -732,7 +732,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-pencil"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
@@ -742,7 +742,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon customicon-webdev" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-html5"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
@@ -756,7 +756,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-tv"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Media Editing</h4>
@@ -766,11 +766,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-wrench"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Hardware</h4>
-                            <p>Arduino & Fritzing</p>
+                            <p>Arduino, NodeMCU & Fritzing</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
