--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-right">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="fa fa-film"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="fa fa-film" aria-hidden="true"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
@@ -709,7 +709,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-code"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-code" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
@@ -719,7 +719,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-gamepad"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-gamepad" aria-hidden="true"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
