Tried formatting font awesome icons

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-right">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="fa fa-film" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-film" aria-hidden="true"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
@@ -719,8 +719,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
+                              <div class="text-center">
                             <i class="hovicon effect-2 sub-a feat"><span class="fa fa-gamepad" aria-hidden="true"></span></i>
                         </div>
+                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
                             <p>Unreal Engine 4 & Unity 3D</p>
@@ -732,7 +734,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
+                           <div class="text-center">
                             <i class="hovicon effect-2 sub-a feat"><span class="fa fa-pencil"></span></i>
+                        </div>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
