Added style in html for icon

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-gamepad" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-gamepad" aria-hidden="true" style="position:relative"></span></i>
                          </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Game Engines</h4>
